# trolleyman.org

./: .dockerignore  .editorconfig  .gitignore  .gitmodules  .ignore  .rustfmt.toml  Caddyfile  Caddyfile_dev  Cargo.toml  Dockerfile  README.md  Rocket.toml  caddyDockerfile  clean.bat  clean.sh  config_dev.toml  diesel.toml  docker-compose.dev.yml  docker-compose.yml  docker-start.bat  docker-start.sh  docker_entrypoint.sh  entrypoint.sh  handle_docker.py  heartbeat.sh  package-lock.json  package.json  server_run_docker.sh  server_start.sh  setup.cfg  startup.sh  update.bat  update.py  update.sh
FlappyClone/: apps.py  models.py  update.bat  update.sh  urls.py  views.py
FlappyClone/api/: lib.py  urls.py  validation.py  views.py
FlappyClone/migrations/: 0001_initial.py
FlappyClone/templates/FlappyClone/: base.html  index.html  login.html
django/: .dockerignore  .gitignore  manage.py  ping.sh  requirements.txt
django/FlappyClone/: .gitignore  README.md  admin.py  forms.py  models.py  urls.py  views.py
django/FlappyClone/api/: urls.py  validation.py  views.py
django/FlappyClone/migrations/: 0001_initial.py  0002_auto_20170410_2300.py  0003_auto_20170410_2319.py  0004_auto_20170410_2320.py  0005_auto_20170410_2351.py  0006_auto_20170410_2355.py
django/database/: dummy.txt
django/git_hook/: apps.py  com_consts.py  urls.py  views.py
django/git_refresh/: apps.py  urls.py  views.py
django/homepage/: urls.py  views.py
django/keys/: dummy.txt
django/tanks/: README.md  urls.py  views.py
django/trolleyman/: context_processors.py  filters.py  secret_key_gen.py  settings.py  urls.py  views.py  wsgi.py
facebook_grpc/: .gitignore  Dockerfile  README.md  docker_entrypoint.sh  facebook.py  facebook_grpc.py  requirements.txt  test.py
facebook_grpc/proto/: facebook.proto  facebook_grpc.proto  facebook_grpc_pb2.py  facebook_grpc_pb2_grpc.py  facebook_pb2.py  facebook_pb2_grpc.py
facebooksrv/: Dockerfile  README.md  facebooksrv.py
facebooksrv/proto/: facebooksrv_pb2.py  facebooksrv_pb2_grpc.py
homepage/: urls.py  views.py
homepage/templates/homepage/: _banner_bg.html  _banner_img_style.html  elements.html  index-old.html  index.html  projects.html
migrations/2020-01-20-215050_create_flappy_leaderboard/: down.sql  up.sql
migrations/2020-01-20-215050_create_leaderboard/: up.sql
migrations/2020-01-21-182634_create_linc/: down.sql  up.sql
migrations/2020-01-22-220043_linc_lastedited/: down.sql  up.sql
migrations/2020-02-16-175601_git_lfs/: down.sql  up.sql
migrations/2020-02-21-201116_git_lfs_upload_token/: down.sql  up.sql
migrations/2020-02-21-233115_git_lfs_download_token/: down.sql  up.sql
migrations/2020-03-22-134028_user/: down.sql  up.sql
migrations/2020-03-29-104330_session_token/: down.sql  up.sql
migrations/2020-04-10-223745_facebook_account/: up.sql
migrations/2021-07-05-223450_delete_facebook_account/: up.sql
scripts/: .gitignore  build_tanks.js  docker_entrypoint.sh  server_run_docker.sh  server_start.sh
src/: account.rs  cli.rs  config.rs  db.rs  error.rs  facebook.rs  flappy.rs  git_lfs.rs  github.rs  log_fairing.rs  logging.rs  main.rs  recaptcha.rs  schema.patch  schema.rs  tanks.rs  user.rs  util.rs
src/account/: reserved_usernames.csv
src/app/: account.rs  error.rs  facebook.rs  github.rs  mod.rs  recaptcha.rs
src/app/account/: mod.rs  types.rs  validation.rs
src/app/flappy/: api.rs  mod.rs
src/app/git_lfs/: mod.rs  models.rs  request.rs  response.rs
src/app/linc/: README.md  mod.rs
src/app/root/: mod.rs
src/assets/: empty_db.sqlite3
src/cli/: util.rs
src/flappy/: api.rs  mod.rs
src/git_lfs/: models.rs  request.rs  response.rs  util.rs
src/grpc/: facebook.rs  facebook_grpc.rs  gen.rs  mod.rs
src/linc/: mod.rs
src/models/: facebook.rs  flappy.rs  git_lfs.rs  linc.rs  mod.rs  password.rs  schema.rs  user.rs
src/models/account/: mod.rs  password.rs  session.rs  user.rs
src/templates/: _base.html
src/user/: password.rs
src/util/: read.rs  retry.rs  serde.rs
static/css/: base.css  main-mod.css  main.css
static/css/account/: account.css  base.css  login.css  register.css
static/css/flappy/: game.css
static/css/linc/: base.css  display.css  (+2 more)
static/flappy/: flappy.eot
tanks/: Cargo.toml  webpack.config.js
tanks/src/: lib.rs
templates/: _base.tera  _macros.tera  contact_details.tera  error.tera  index.tera
templates/account/: _base.tera  account.tera  login.tera  register.tera  signin.tera
templates/flappy/: game.tera
templates/linc/: _base.tera  base.html.tera  demo.html.tera  demo.tera  index.html.tera  index.tera
templates/projects/: _base.tera  dissertation.tera  flappy.tera  linc.tera  robot.tera  website.tera  zucchini.tera
templates/tanks/: game.tera
templates_todo/homepage/: _banner_bg.tera
todo/: .dockerignore  Caddyfile
trolleyman/: secret_key_gen.py  settings.py  urls.py  wsgi.py
xtask/: Cargo.toml
xtask/src/: main.rs
(+101 files in other folders)
