[package]
name = "trolleyman-org"
version = "0.1.0"
authors = ["Callum Tolley <cgtrolley@gmail.com>"]
edition = "2018"

[dependencies]
# Rocket
rocket = { git = "https://github.com/SergioBenitez/Rocket" }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket", default-features = false, features = ["serve", "json", "tera_templates", "diesel_sqlite_pool"] }
time = "0.2.9"  # Only used for interacting with cookie builder

# Diesel
diesel = { version = "1.4.3", features = ["chrono", "sqlite"] }
diesel_migrations = "1.4.0"
libsqlite3-sys = { version = ">=0.8.0, <0.17.0", features = ["min_sqlite_version_3_7_16", "bundled"] }  # Note: Update this if diesel is updated. This is a bit of a hack in order to get sqlite3.lib to be bundled on Windows.

# Error
anyhow = "1.0.26"
thiserror = "1.0.12"

# Serialization/deserialization
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.44"
json-patch = "*"
toml = "0.5.6"

# Hashing
hmac = "0.7.1"
sha-1 = "0.8.2"
sha3 = "0.8.2"
subtle = "1.0.0"
hex = "0.4.2"
base64 = "0.12.0"

# Logging
log = "0.4.8"
simplelog = "0.7.4"

# Util
reqwest = { version = "0.10.1", features = ["blocking"] }
rand = "0.7.3"
chrono = "0.4"
lazy_static = "1.4.0"
derive_more = "0.99.0"
