[package]
name = "trolleyman-org"
version = "0.1.0"
authors = ["Callum Tolley <cgtrolley@gmail.com>"]
edition = "2018"

[dependencies]
# Rocket
rocket = { git = "https://github.com/SergioBenitez/Rocket" }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket", default-features = false, features = ["serve", "json", "tera_templates", "diesel_sqlite_pool"] }
# Note: Update this if Rocket is updated, to match Rocket. Only used for interacting with cookie builder.
time = "0.2.16"

# Diesel
diesel = { version = "1.4.3", features = ["chrono", "sqlite"] }
diesel_migrations = "1.4.0"
# Note: Update this if diesel is updated. This is a bit of a hack in order to get sqlite3.lib to be bundled on Windows.
libsqlite3-sys = { version = ">=0.8.0, <0.17.0", features = ["min_sqlite_version_3_7_16", "bundled"] }

# Error
anyhow = "1.0.26"
thiserror = "1.0.12"

# Serialization/deserialization
json-patch = "*"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.44"
toml = "0.5.6"

# Hashing
base64 = "0.12.0"
hmac = "0.7.1"
sha-1 = "0.8.2"
sha3 = "0.8.2"
subtle = "1.0.0"

# Logging
log = "0.4.8"
simplelog = "0.7.4"

# Util
chrono = "0.4"
clap = "2.33.0"
derive_more = "0.99.0"
hex = "0.4.2"
lazy_static = "1.4.0"
multimap = "0.8.1"
openssl-probe = "0.1.2"
rand = "0.7.3"
regex = "1.3.6"
reqwest = { version = "0.10.1", features = ["blocking"] }
rpassword = "4.0"
rprompt = "1.0.5"
url = "2.1.1"
