[package]
name = "trolleyman-org-xtask"
version = "0.1.0"
description = "Build runner for the trolleyman-org project"
authors = ["Callum Tolley <cgtrolley@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
anyhow = "*"
clap = { version = "2.33.0", features = ["color"] }
structopt = "0.2.15"
wasm-pack = "0.8.1"
fs_extra = "1.1.0"
notify = "4.0.15"
protoc-rust-grpc = "0.6.2"
